--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "vue-material-design-icons": "^4.4.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
-    "vuex": "^3.1.2",
-    "webpack": "^4.41.5"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -28,8 +27,11 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.5"
   },
   "eslintConfig": {
     "root": true,
